# house-stats

./: .gitignore  README.md
.github/workflows/: docker-image.yml  (+4 more)
data-loader/: .env  Cargo.toml
data-loader/src/: common.rs  config.rs  database.rs  main.rs  ppd_data.rs  querys.rs
data-loader/src/epc/: common.rs  db_ops.rs  epc_data.rs  mod.rs
data-loader/src/ppd/: db_ops.rs  mod.rs  ppd_data.rs
k8s/: celery-beat.yaml  celery-worker.yaml  cloudflared.yaml  postgres.yaml  redis-svc.yaml  redis.yaml  secrets.yaml  web-api-svc.yaml  web-api.yaml
web-api/: .gitignore  Dockerfile  README.md  docker-compose.yaml  example.alembic.ini  pyproject.toml
web-api/alembic/: env.py
web-api/app/: celery.py  config.py  db.py  main.py  settings.py
web-api/app/auth/: api_tokens.py  base.py  deps.py  native_auth_adapter.py
web-api/app/billing/: billing_aggregator.py  deps.py  payment_base.py  stripe_adapter.py
web-api/app/data/: base.py  houses.py  sales.py
web-api/app/models/: auth.py  billing.py  housing_data.py
web-api/app/routes/: auth.py  billing.py  deps.py  health.py  houses.py  router.py  stats.py
web-api/app/routes/schemas/: auth.py  billing.py  health.py  houses.py  stats.py
web-api/app/stats/: base.py  cache.py  redis_cache.py
web-api/app/stats/v1/sales/: count.py  mean.py  most_expensive.py  pct_change.py  sale_volume.py  standard_dev.py  tenancy.py
web-api/app/tasks/: base_task.py  billing.py  email.py  stats.py
web-api/tests/: common.py  test_billed_routes.py  test_house_endpoints.py
web-api/tests/auth/: common.py  test_api_token.py  test_api_token_endpoints.py  test_native_auth.py  test_native_auth_endpoints.py
web-api/tests/billing/: common.py  test_billing_aggregator.py  test_billing_endpoints.py  test_stripe_adapter.py
web-api/tests/data/: test_sales_dataset.py
web-api/tests/stats/: common.py  test_caching.py  test_stats.py  test_stats_endpoints.py
web-api/tests/tasks/: test_stat_tasks.py
(+3 files in other folders)
