[package]
name = "data-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
sha2 = "0.11.0-rc.3"
tokio-postgres = "0.7.15"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
crypto-common = "0.2.0-rc.9"
dotenv = "0.15.0"
log = "0.4.29"
simple_logger = "5.1.0"
reqwest =  {  version = "0.13.1", features = ["blocking"] }
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
regex = "1.12.2"
once_cell = "1.21.3"
hex = "0.4.3"
