[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "polars",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.34",
    "stripe>=14.3.0",
    "uvicorn>=0.40.0",
]

[tool.uv]
dev-dependencies = [
  "celery-types>=0.24.0",
  "alembic>=1.18.4",
  "pytest>=9.0.2",
  "pytest-asyncio",
  "ruff>=0.14.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
